syntax = "proto2";
package BlitzMessage;

option java_package = "com.blitzhere.BlitzMessage";
option java_generic_services = true;

import "objectivec-descriptor.proto";
option (google.protobuf.objectivec_file_options).package = "";
option (google.protobuf.objectivec_file_options).class_prefix = "B";
option (google.protobuf.objectivec_file_options).relax_camel_case = true;


import "Types.proto";
import "UserProfiles.proto";
//----------------------------------------------------------------------------------------
//
//                                                                           User Messages
//
//----------------------------------------------------------------------------------------


enum UserMessageStatus {
  MSUnknown   = 0;
  MSImportant = 1;
  MSNew       = 2;
  MSRead      = 3;
  MSArchived  = 4;
}


enum ConversationType {
  CTUnknownX      = 0;
  CTConversation  = 1;
  CTFeedPost      = 2;
  CTNotification  = 3;
}


message Conversation {
  optional string             conversationID  = 1;
  optional string             initiatorUserID = 2;
  optional UserMessageStatus  status          = 3;
  optional string             parentFeedPostID= 4;
  optional Timestamp          creationDate    = 5;
  optional Timestamp          lastActivityDate= 6;
  optional string             lastMessage     = 7;
  optional int32              messageCount    = 8;
  optional int32              unreadCount     = 9;
  repeated string             memberIDs       = 10;
  optional Timestamp          closedDate      = 11;
  optional string             headlineText    = 12;
  optional string             lastActivityUserID  = 13;
  optional string             lastActionURL       = 14;
  optional ConversationType   conversationType    = 15;
  optional bool               isFree          = 16;
  optional string             chargeID        = 17;
}


message ConversationRequest {
  repeated string             userIDs          = 1;
  optional string             parentFeedPostID = 2;
}


message ConversationResponse {
  optional Conversation       conversation    = 1;
  repeated UserProfile        profiles        = 2;
}


message FetchConversations {
  optional Timespan       timespan            = 1;
  repeated Conversation   conversations       = 2;
}


message UpdateConversationStatus {
  optional string             conversationID  = 1;
  optional UserMessageStatus  status          = 2;
  optional ConversationType   conversationType= 3;
}


enum UserMessageType {
  MTUnknown      = 0;
  MTSystem       = 1;
  MTConversation = 2;
  MTNotification = 3;
  MTActionNotification = 4;
}


message UserMessage {
  optional string           messageID         = 1;
  optional string           senderID          = 2;
  optional string           conversationID    = 3;
  repeated string           recipients        = 4;
  optional Timestamp        creationDate      = 5;
  optional Timestamp        notificationDate  = 6;
  optional Timestamp        readDate          = 7;
  optional UserMessageType  messageType       = 8;
  optional UserMessageStatus messageStatus    = 9;
  optional string           messageText       = 10;
  optional string           actionIcon        = 11;
  optional string           actionURL         = 12;
}


message UserMessageUpdate {
  optional Timespan      timespan = 1;  //  Timespan for request
  repeated UserMessage   messages = 2;
}

